Fix scrollbars on windows

--- a/src/main/assets/stylesheets/global.less
+++ b/src/main/assets/stylesheets/global.less
@@ -294,7 +294,8 @@ a {
 }
 
 .scrollable {
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .text(@color, @size: @font-size-medium, @weight: @font-weight-regular) {
